# desktop-file-utils

./: .cvsignore  .gitlab-ci.yml  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  desktop-file-utils.doap  install.sh  make_dist.sh  meson.build
man/: Makefile.am  desktop-file-install.1  desktop-file-validate.1  update-desktop-database.1
misc/: .cvsignore  Makefile.am  desktop-entry-mode.el
src/: .cvsignore  Makefile.am  canonicalize.c  canonicalize.h  desktop_file.c  desktop_file.h  dfi-builder.c  dfi-builder.h  dfi-id-list.c  dfi-id-list.h  dfi-keyfile.c  dfi-keyfile.h  dfi-string-list.c  dfi-string-list.h  dfi-string-table.c  dfi-string-table.h  dfi-text-index.c  dfi-text-index.h  dfu-test.c  eggdesktopentries.c  eggdesktopentries.h  eggdirfuncs.c  gen-compat-tree.c  gen_table.py  install.c  keyfileutils.c  keyfileutils.h  menu-entries.c  menu-entries.h  menu-layout.c  menu-layout.h  menu-method.c  menu-modules.conf  menu-overrides.c  menu-overrides.h  menu-parser.c  menu-parser.h  menu-process.c  menu-process.h  menu-tree-cache.c  (+19 more)
src/test/: baobab.desktop  cheese.desktop  dconf-editor.desktop  desktop-file-index  eog.desktop  evince-previewer.desktop  evince.desktop  file-roller.desktop  gcr-prompter.desktop  gcr-viewer.desktop  gedit.desktop  glade.desktop  gnome-clocks.desktop  gnome-contacts.desktop  gnome-font-viewer.desktop  gnome-music.desktop  gnome-terminal.desktop  gucharmap.desktop  nautilus-autorun-software.desktop  nautilus-classic.desktop  nautilus-connect-server.desktop  nautilus.desktop  totem.desktop  yelp.desktop
src/test/.metadata/: mimeinfo.cache
test/: Makefile.am  all-tests.sh  run-test.c
test/test-data-01/: test01.menu  test01.results
test/test-data-01/desktop-entries/: gnome-terminal.desktop  kde-KMail.desktop
