AC_INIT(src/desktop_file.h)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(desktop-file-utils, 0.1)

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AM_MAINTAINER_MODE

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_ARG_PROGRAM
AM_PROG_LIBTOOL

changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

PKG_CHECK_MODULES(DESKTOP_FILE_UTILS, glib-2.0 >= 2.0.0)
AC_SUBST(DESKTOP_FILE_UTILS_CFLAGS)
AC_SUBST(DESKTOP_FILE_UTILS_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
])
